--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
             margin-top: 10px;
             padding-left: 20px;
         }
+        .jugador, .capitan {
+            background: #e7e7e7;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+            margin: 5px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
         .match {
             margin-top: 10px;
             padding: 10px;
@@ -85,11 +95,6 @@
             margin-top: 10px;
             padding-left: 20px;
         }
-        .fase-jugada {
-            background: #e7f3fe;
-            padding: 10px;
-            margin: 10px 0;
-        }
     </style>
 </head>
 <body>
@@ -104,7 +109,6 @@
                 <li><a href="#premio" onclick="showSection('premio')">Premio</a></li>
                 <li><a href="#formato" onclick="showSection('formato')">Formato del Torneo</a></li>
                 <li><a href="#fases" onclick="showSection('fases')">Fases del Torneo</a></li>
-                <li><a href="#fases-jugadas" onclick="showSection('fases-jugadas')">Fases Jugadas</a></li>
                 <li><a href="#equipos" onclick="showSection('equipos')">Equipos del Torneo</a></li>
             </ul>
         </nav>
@@ -230,42 +234,6 @@
         </div>
     </main>
 
-    <main id="fases-jugadas">
-        <h2>Fases Jugadas</h2>
-        <div class="fases-jugadas">
-            <div class="fase-jugada">
-                <h3>Fase de Grupos</h3>
-                <div class="partido">
-                    <div class="match">Equipo A vs. Equipo B <span class="resultado">Resultado: 1 - 0</span></div>
-                </div>
-                <div class="partido">
-                    <div class="match">Equipo C vs. Equipo D <span class="resultado">Resultado: 0 - 1</span></div>
-                </div>
-            </div>
-            <div class="fase-jugada">
-                <h3>Cuartos de Final</h3>
-                <div class="partido">
-                    <div class="match">Ganador 1 vs. Ganador 2 <span class="resultado">Resultado: 2 - 1</span></div>
-                </div>
-                <div class="partido">
-                    <div class="match">Ganador 3 vs. Ganador 4 <span class="resultado">Resultado: 1 - 3</span></div>
-                </div>
-            </div>
-            <div class="fase-jugada">
-                <h3>Semifinales</h3>
-                <div class="partido">
-                    <div class="match">Ganador 1 vs. Ganador 3 <span class="resultado">Resultado: 3 - 2</span></div>
-                </div>
-            </div>
-            <div class="fase-jugada">
-                <h3>Final</h3>
-                <div class="partido">
-                    <div class="match">Ganador Semifinal 1 vs. Ganador Semifinal 2 <span class="resultado">Resultado: 1 - 0</span></div>
-                </div>
-            </div>
-        </div>
-    </main>
-
     <main id="equipos">
         <h2>Equipos del Torneo</h2>
         <div class="equipos">
@@ -323,3 +291,4 @@
     </script>
 </body>
 </html>
+
