--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="fase" onclick="toggleJugadores('fase1')">
                 <h3>Fase de Grupos</h3>
                 <div class="jugadores" id="fase1">
-                    <div class="equipo">Equipo A vs. Equipo B <span class="resultado">Resultado: <input type="number" min="0" max="10" placeholder="G" /></span></div>
+                    <div class="equipo">Equipo A vs. Equipo B <span class="resultado">Resultado: <input type="number" min="0" max="10" placeholder="1" /></span></div>
                     <div class="equipo">Equipo C vs. Equipo D <span class="resultado">Resultado: <input type="number" min="0" max="10" placeholder="G" /></span></div>
                     <div class="equipo">Equipo E vs. Equipo F <span class="resultado">Resultado: <input type="number" min="0" max="10" placeholder="G" /></span></div>
                     <div class="equipo">Equipo G vs. Equipo H <span class="resultado">Resultado: <input type="number" min="0" max="10" placeholder="G" /></span></div>
