--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                     <div class="card-body">
                         <h5>Jugadores:</h5>
                         <ul>
-                            <li><a href="https://www.op.gg/summoners/euw/Chimquack-EUW">ErDanie34</a></li>
-                            <li><a href="https://www.op.gg/summoners/euw/Binguxs-CAT">Pablobop</a></li>
-                            <li><a href="https://www.op.gg/summoners/euw/kakitamaster-1401">Kakitamaster</a></li>
-                            <li><a href="https://na.op.gg/summoner/userName=Player4">Jugador 4</a></li>
-                            <li><a href="https://na.op.gg/summoner/userName=Player5">Jugador 5</a></li>
+                            <li>TOP<a href="https://www.op.gg/summoners/euw/rezok2040-EUW">Rezok2040</a></li>
+                            <li>JGL<a href="https://www.op.gg/summoners/euw/Chimquack-EUW">ErDanie34</a></li>
+                            <li>MID<a href="https://www.op.gg/summoners/euw/Binguxs-CAT">Pablobop</a></li>
+                            <li>ADC<a href="https://www.op.gg/summoners/euw/kakitamaster-1401">kakitamaster</a></li>
+                            <li>SUP<a href="https://www.op.gg/summoners/euw/SrGnar-EUW">SrGnar</a></li>
                         </ul>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="card-header" id="headingB">
                     <h5 class="mb-0">
                         <button class="accordion-button" type="button" data-toggle="collapse" data-target="#teamB" aria-expanded="false" aria-controls="teamB">
-                            Equipo B
+                            UnderDogs
                         </button>
                     </h5>
                 </div>
@@ -144,11 +144,11 @@
                     <div class="card-body">
                         <h5>Jugadores:</h5>
                         <ul>
-                            <li><a href="https://na.op.gg/summoner/userName=Player6">Jugador 1</a></li>
-                            <li><a href="https://na.op.gg/summoner/userName=Player7">Jugador 2</a></li>
-                            <li><a href="https://na.op.gg/summoner/userName=Player8">Jugador 3</a></li>
-                            <li><a href="https://na.op.gg/summoner/userName=Player9">Jugador 4</a></li>
-                            <li><a href="https://na.op.gg/summoner/userName=Player10">Jugador 5</a></li>
+                            <li>TOP<a href="https://www.op.gg/summoners/euw/James991630-EUW">James991630</a></li>
+                            <li>JGL<a href="https://www.op.gg/summoners/euw/sustanon-EUW">sustanon</a></li>
+                            <li>MID<a href="https://www.op.gg/summoners/euw/AlejandroMag-963">AlejandroMag</a></li>
+                            <li>ADC<a href="https://www.op.gg/summoners/euw/D4dtor-444">D4dtor</a></li>
+                            <li>SUP<a href="https://www.op.gg/summoners/euw/balonix2004-00001">balonix2004</a></li>
                         </ul>
                     </div>
                 </div>
